--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,34 @@
     <link rel="icon" type="image/svg+xml" href="./img/javascript.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 12</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <form class="search-form">
+      <label>
+        <input
+          type="text"
+          name="query"
+          class="input"
+          placeholder="Search images ..."
+        />
+      </label>
+      <button class="submit-btn" type="submit">Search</button>
+    </form>
+
+    <ul class="gallery"></ul>
+
+    <div class="load-more-container">
+      <button class="load-more" hidden>Load more</button>
+      <div class="loader-backdrop hidden">
+        <span class="loader"></span>
+      </div>
+    </div>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
